--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -59,9 +59,10 @@ jobs:
           name: Dependencies Updates
           path: dependencyUpdates.txt
       - name: Test with latest
-        run: go install gotest.tools/gotestsum@latest; gotestsum --junitfile results.xml || true
+        run: go install gotest.tools/gotestsum@latest; gotestsum --junitfile results.xml -- -timeout 0 -v ./... || true
         shell: bash
         env:
+          RETRYCOUNT: 1
           LICENSE: ${{ secrets.LICENSE }}
       - if: always()
         name: Report
@@ -72,9 +73,10 @@ jobs:
           reporter: java-junit
           fail-on-error: 'false'
       - name: Test with latest and workaround
-        run: go install gotest.tools/gotestsum@latest; gotestsum --junitfile results.xml || true
+        run: go install gotest.tools/gotestsum@latest; gotestsum --junitfile results.xml -- -timeout 0 -v ./... || true
         shell: bash
         env:
+          RETRYCOUNT: 1
           LICENSE: ${{ secrets.LICENSE }}
           ENABLE_WORKAROUND: !!str true
       - if: always()
@@ -86,9 +88,10 @@ jobs:
           reporter: java-junit
           fail-on-error: 'false'
       - name: Test with 2022.4
-        run: go install gotest.tools/gotestsum@latest; gotestsum --junitfile results.xml || true
+        run: go install gotest.tools/gotestsum@latest; gotestsum --junitfile results.xml -- -timeout 0 -v ./... || true
         shell: bash
         env:
+          RETRYCOUNT: 1
           LICENSE: ${{ secrets.LICENSE }}
           OCTOVERSION: 2022.4
       - if: always()
